--- a/color-clock/package.json
+++ b/color-clock/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Hello World!"
+    "test": "echo \"Hello World!'"
   },
   "author": "",
   "license": "ISC"
